@@ -1,3 +1,7 @@
+  - fix bug creating a parameterized role with parameter but no role block throw exception
+  - fix bug unexpected error while set a parameter in another role
+  - make sure we can load a parameterized with no arguments no with keyword (like using default parameters)
+
 0.500   Tue Jan 02 2024 14:12:22 CET
   - add experimental feature; parameter keyword
   - small fixed in pod and documentation
